[core] RestCatalog: add status in GetCatalogResponse

--- a/paimon-open-api/rest-management-api.yaml
+++ b/paimon-open-api/rest-management-api.yaml
@@ -260,6 +260,9 @@ components:
           type: object
           additionalProperties:
             type: string
+        status:
+          type: string
+          enum: ["NEW", "INITIALIZING", "INITIALIZE_FAILED", "RUNNING", "TERMINATED", "STORAGE_OPTIMIZATION_DISABLED", "DELETING", "DELETE_FAILED", "DELETED", "RELEASED","READ_ONLY"]
         owner:
           description: Username of current owner of catalog.
           type: string
